components/ra/safetytest-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safetytest-api
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        co.elastic.logs/processors.add_fields.target: ""
        co.elastic.logs/processors.add_fields.fields.application.name: "safetytest-api"
        co.elastic.logs/processors.add_fields.fields.application.domain: "safetytest-api"
        co.elastic.logs/processors.add_fields.fields.application.tier: web
        co.elastic.logs/processors.add_fields.fields.application.language: "typescript"
        # Extract log_level, class, and log_message as separate fields for elastic
        co.elastic.logs/processors.dissect.tokenizer: "%{?date} %{?time} %{log_level->} %{log_message}"
        co.elastic.logs/processors.dissect.target_prefix: ""
        co.elastic.logs/multiline.pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}"
        co.elastic.logs/multiline.negate: "true"
        co.elastic.logs/multiline.match: "after"
    spec:
      containers:
        - name: safetytest-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /safetytest-api/health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: registry-creds
