components/ra/safetytest-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safetytest-api
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8080
      targetPort: 8080
